--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@flyerhq/react-native-link-preview": "^1.6.0",
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/messaging": "^17.4.0",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -26,9 +28,11 @@
     "react-native": "0.71.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
